# soc-copilot

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
data/evals/runs/: phase1_brute_force_after_prompt_fix.json  phase1_brute_force_baseline.json  phase1_phishing_after_prompt_fix.json  phase1_phishing_payload_anchoring.json
data/mitre/: technique_groups.json
data/sample_alerts/: brute_force_ssh.json  phishing_attachment.json  prompt_injection.json  suspicious_url_click.json
scripts/: build_group_map.py
src/: config.py  copilot.py  history.py  injection.py  main.py  mitre_groups.py  models.py  report.py
src/prompts/: agentic.py  system.py
src/tools/: abuseipdb.py  base.py  registry.py  threat_actor.py  urlscan.py  virustotal.py
tests/: conftest.py  expectations.py  test_history.py  test_injection.py  test_investigations.py  test_report.py  test_sanity.py
